[package]
name = "rust_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
json = "0.12.4"
serde = { version = "1.0.198", features = ["derive"] }
surrealdb = "1.4.2"
uuid = "1.8.0"
validator = {version = "0.18.1", features = ["derive"] }
